feat: 플레이어가 배팅 금액을 가질 수 있는 기능 구현